// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildModel — exemples du dépôt > acceptance-01-quart-tournant.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 163.6,
  "colletsChord": [
    227.4,
    222.6,
    177.9,
    169.5,
    165,
    163.6,
    165,
    169.5,
    177.9,
    192.6,
    219.3,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1600,
    "nosing": 4,
  },
  "n": 15,
  "parts": 29,
  "run": 3360.3,
  "treads": "swwwwwwwwwwwss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "1-12 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > half-turn.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.97,
  "colletMin": 178.7,
  "colletsChord": [
    180.2,
    180.2,
    180.2,
    180.2,
    180.2,
    178.9,
    178.7,
    180.2,
    180.2,
    180.2,
    180.2,
    180.2,
    180.2,
    180.2,
  ],
  "firstRise": 180,
  "g": 269.97,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 29,
  "run": 3779.6,
  "treads": "wwwwwwwwwwwwww",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "0-14 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > j3a-acceptance-01-bois.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 600.02,
  "colletMin": 163.6,
  "colletsChord": [
    227.4,
    222.6,
    177.9,
    169.5,
    165,
    163.6,
    165,
    169.5,
    177.9,
    192.6,
    219.3,
  ],
  "firstRise": 180,
  "g": 240.02,
  "h": 180,
  "headroom": 2035,
  "headroomWidth": {
    "min": 1600,
    "nosing": 4,
  },
  "n": 15,
  "parts": 34,
  "run": 3360.3,
  "treads": "swwwwwwwwwwwss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "1-12 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > quarter-landing.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 180,
  "g": 270,
  "h": 180,
  "headroom": 1960,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 4216.9,
  "treads": "sslsssssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > quarter-left.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.99,
  "colletMin": 176.9,
  "colletsChord": [
    241.4,
    207.3,
    190.1,
    180.9,
    176.9,
    176.9,
    180.9,
    190.1,
    207.3,
    241.4,
  ],
  "firstRise": 180,
  "g": 269.99,
  "h": 180,
  "headroom": 1960,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 3779.9,
  "treads": "sswwwwwwwwwwss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "2-12 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > quarter-right.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 629.99,
  "colletMin": 176.9,
  "colletsChord": [
    241.4,
    207.3,
    190.1,
    180.9,
    176.9,
    176.9,
    180.9,
    190.1,
    207.3,
    241.4,
  ],
  "firstRise": 180,
  "g": 269.99,
  "h": 180,
  "headroom": 1960,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 3779.9,
  "treads": "sswwwwwwwwwwss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [
    "2-12 M3-cubic",
  ],
}
`;

exports[`buildModel — exemples du dépôt > straight.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630,
  "colletMin": null,
  "colletsChord": [],
  "firstRise": 180,
  "g": 270,
  "h": 180,
  "headroom": 1900,
  "headroomWidth": {
    "min": 1960,
    "nosing": 2,
  },
  "n": 15,
  "parts": 29,
  "run": 3780,
  "treads": "ssssssssssssss",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 1,
  },
  "zones": [],
}
`;

exports[`buildModel — exemples du dépôt > two-quarters-u.blondel.json : cotes principales (non-régression) 1`] = `
{
  "blondel": 630.01,
  "colletMin": 135,
  "colletsChord": [
    135,
    135,
    135,
    135,
    142.5,
    257.5,
    188.1,
    188.1,
    188.1,
    188.1,
    188.1,
    188.1,
    188.1,
    188.1,
  ],
  "firstRise": 180,
  "g": 270.01,
  "h": 180,
  "headroom": null,
  "headroomWidth": null,
  "n": 15,
  "parts": 29,
  "run": 3780.2,
  "treads": "wwwwwwwwwwwwww",
  "violations": {
    "avertissement": 0,
    "bloquant": 0,
    "conseil": 0,
  },
  "zones": [
    "0-4 M3-cubic",
    "6-14 M3-cubic",
  ],
}
`;
